# detect_bs_text

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt  research_log.md  samples.json
bs_writing_detector/data/: load_md.py
bs_writing_detector/metrics/: ppx.py
nbs/: 01_detection_using_adapter_ft copy.ipynb  01_detection_using_adapter_ft.ipynb  01_detection_using_adapter_ft_split.ipynb  01_use_tldr_prompt.ipynb  02_detection_using_tldr_prompt.ipynb  02_use_lora.ipynb  02_use_lora_bnb_fail.ipynb  02_use_lora_transformertrain.ipynb  02_use_lora_transformertrain_WORK.ipynb  02_use_lora_transformertrain_collate.ipynb  03_get_lesswrong_data.ipynb  03_use_ia3_hftrain .ipynb  03_use_lora_hftrain.ipynb
samples/: 2024_anthropic_palintir.md  2024_arxiv_meh.md  2024_bob_fanfic.md  2024_bob_fanfic2.md  2024_deliberative_alignment.md  2024_gpt4_fake_paper.md  2024_gwern_reddit.md  2024_how_to_focus.md  2024_lesswrong_slop.md  2024_news_anthropic.md  2024_openai_emails.md  2024_trump_appointment.md  2025_h5n1_report.md  2025_lw_human-study-on-ai-spear-phishing-campaigns.md  2025_lw_parkinson-s-law-and-the-ideology-of-statistics-1.md  2025_lw_the-intelligence-curse.md  2025_lw_the-laws-of-large-numbers.md  2025_lw_what-s-the-short-timeline-plan.md  bletchley_decleration.md  disney_appointment.md  fake_paper.md  fauci_emails.md  how_to_catch_a_liar.md  lk-99_end.md  lk-99_espanol.md  lorem_ipsum.md  openai_board_ann.md  openai_paper_weak_to_strong.md  politics_is_the_mind_killer.md
samples/2023/: 2012_cicero_fin1.md  2023_bletchley_decleration.md  lk-99_end.md  (+7 more)
